# carbon-efficiency

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/agents/: carbon_agent.py
backend/app/: __init__.py  calculations.py  fireworks.py  main.py  options.py  reports.py  schemas.py  telemetry.py
backend/tests/: test_api.py  test_calculations.py  test_telemetry.py
docs/: slide-deck.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  api.js  main.tsx  styles.css  videoConfig.js
frontend/src/components/: AgentTrace.jsx  OperatorReport.jsx  RunComparison.jsx  RunHistory.jsx  ScenarioForm.jsx  StatTiles.jsx  TelemetryCharts.jsx  VideoDemo.jsx
frontend/tests/: App.test.tsx
tools/: collect_amd_smi.py
