[project]
name = "carbonbuilder-backend"
version = "0.1.0"
description = "Carbon efficiency analyzer API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.3,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "respx>=0.21,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
